@@ -13,37 +13,37 @@
 //
 // Version
 //
-#include "..\version.h"
+#include "..\..\version.h"
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION FILEVER_INCVERSION
  PRODUCTVERSION PRODUCTVER_INCVERSION
- FILEFLAGSMASK 0x17L
+ FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
 #else
  FILEFLAGS 0x0L
 #endif
  FILEOS 0x4L
- FILETYPE 0x2L
+ FILETYPE 0x1L
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040004b0"
+        BLOCK "040004e4"
         BEGIN
             VALUE "CompanyName", "www.tortoisesvn.org"
-            VALUE "FileDescription", "Shell extension part of TortoiseSVN"
+            VALUE "FileDescription", "TortoiseSVN shell extension client"
             VALUE "FileVersion", STRFILEVER_INCVERSION
-            VALUE "InternalName", "TortoiseShell"
+            VALUE "InternalName", "TortoiseSVN.dll"
             VALUE "LegalCopyright", "Copyright (C) 2003"
-            VALUE "OriginalFilename", "Tortoise.dll"
-            VALUE "ProductName", "TortoiseSVN dll"
+            VALUE "OriginalFilename", "TortoiseSVN.dll"
+            VALUE "ProductName", "TortoiseSVN"
             VALUE "ProductVersion", STRPRODUCTVER_INCVERSION
         END
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x400, 1200
+        VALUE "Translation", 0x400, 1252
     END
 END
 
