@@ -17,7 +17,7 @@
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #pragma once
-
+#include "stdafx.h"
 #include <windows.h>
 #include "registry.h"
 #include "SVNStatus.h"
